Fix scientific names not matching, issue w/ links, truncate names earlier

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -24,6 +24,7 @@ button[type="submit"] {
   border: none;
   cursor: pointer;
   text-align: center;
+  margin-bottom: 15px;
 }
 
 button[type="submit"]:hover {
